# sonder

./: .gitignore  TMC2209_corexy_copy.yaml  config.py  export_db.py  fine_tune.py  firebase_init.py  guardian_collector.py  main.py  main_collector.py  process_existing_articles.py  process_quotes.py  pyproject.toml  quote_extractor.py  quotes_export_20250217_185001.csv  requirements.txt  run_model.py  run_sonder.sh  scraper.py  sendData.py  training_data.jsonl
Microcontroller/: .gitignore
Microcontroller/FontDemo/: FontDemo.ino
Microcontroller/RGB_LED_Tester/: RGB_LED_Tester.ino
Microcontroller/e-paper-01/: e-paper-01.ino
Microcontroller/e-paper-02/: e-paper-02.ino
Microcontroller/e-paper-03/: e-paper-03.ino
Microcontroller/e-paper-04/: e-paper-04.ino
Microcontroller/e-paper-05/: e-paper-05.ino  secrets.h
Microcontroller/e-paper-06/: e-paper-06.ino
Microcontroller/e-paper-07/: e-paper-07.ino
Microcontroller/e-paper-08/: e-paper-08.ino
Microcontroller/e-paper-10/: NarkissAsaf_Regular20pt7b.h  NarkissAsaf_Regular9pt7b.h  e-paper-10.ino
Microcontroller/e-paper-11/: NarkissAsaf_Regular12pt7b.h  e-paper-11.ino
Microcontroller/e-paper-12/: SpecialChars.h  e-paper-12.ino
scraper/: .gitignore  config.py  dockerfile  fine_tune.py  firebase_init.py  good_quotes.json  guardian_collector.py  local_clean_duplicates.py  main.py  manage_display_queue.py  nyt_collector.py  populate_display_queue.py  process_quotes.py  quote_api.py  quote_extractor.py  quotes_export_20250211_101222.csv  run_sonder.sh  scraper.py  training-examples-v0.csv
(+8 files in other folders)
