[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Jasmine Nackash <jn2813@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
firebase-admin = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
